--- a/index.html
+++ b/index.html
@@ -1,414 +1,162 @@
 <!DOCTYPE html>
-<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Spartan Housing Alliance</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Housing Advocacy</title>
+
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+
+  <!-- Bootstrap Icons -->
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+  />
+
+  <!-- AOS animation CSS -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
+  />
+
   <style>
-    :root {
-      --msu-green: #18453b;
-      --msu-white: #ffffff;
+    body {
+      font-family: Arial, sans-serif;
+      margin-top: 70px;
+      scroll-behavior: smooth;
     }
-    .navbar {
-      background-color: var(--msu-green) !important;
-    }
-    .navbar-brand, .nav-link {
-      color: var(--msu-white) !important;
-      font-weight: bold;
-    }
+
+    /* Hero section */
     .hero {
-      background: var(--msu-green);
-      color: var(--msu-white);
-      padding: 6rem 1rem;
+      height: 100vh;
+      background: linear-gradient(135deg, #007bff, #6610f2);
+      color: #fff;
+      display: flex;
+      align-items: center;
       text-align: center;
     }
-    .hero h1 {
-      font-size: 3rem;
-      margin-bottom: 1rem;
+    .hero .btn {
+      margin-top: 20px;
     }
-    .hero p {
-      font-size: 1.25rem;
-      margin-bottom: 2rem;
-    }
-    footer {
-      background: var(--msu-green);
-      color: var(--msu-white);
-      text-align: center;
-      padding: 1rem;
-      margin-top: 2rem;
-    }
-    .card {
-      border: none;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+
+    /* Back-to-top button */
+    #backToTop {
+      display: none;
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      z-index: 1000;
     }
   </style>
 </head>
-<body>
-
-  <!-- NAVBAR -->
-  <nav class="navbar navbar-expand-lg navbar-dark">
+<body data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="70" tabindex="0">
+  <!-- Navbar -->
+  <nav id="mainNav" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">SHA</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <a class="navbar-brand" href="#">My Org</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+      >
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="#mission">Mission</a></li>
-          <li class="nav-item"><a class="nav-link" href="#exec">Exec Board</a></li>
-          <li class="nav-item"><a class="nav-link" href="#calendar">Calendar</a></li>
-          <li class="nav-item"><a class="nav-link" href="#join">Join</a></li>
-          <li class="nav-item"><a class="nav-link" href="#announcements">Announcements</a></li>
-          <li class="nav-item"><a class="nav-link" href="#newsletters">Newsletters</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#projects">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
         </ul>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Spartan Housing Alliance</title>
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <!-- AOS Animations -->
-    <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
-    <!-- Custom Styles -->
-    <link href="style.css" rel="stylesheet" />
-  </head>
-  <body data-bs-spy="scroll" data-bs-target="#navbarNav" data-bs-offset="70">
-    <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="#">SHA</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#mission">Mission</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#exec">Exec Board</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#calendar">Calendar</a>
-            </li>
-            <li class="nav-item"><a class="nav-link" href="#join">Join</a></li>
-            <li class="nav-item">
-              <a class="nav-link" href="#announcements">Announcements</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#newsletters">Newsletters</a>
-            </li>
-          </ul>
-        </div>
       </div>
     </div>
   </nav>
 
-  <!-- HERO -->
-  <section class="hero">
+  <!-- Hero -->
+  <header class="hero">
     <div class="container">
-      <h1>Spartan Housing Alliance</h1>
-      <p>Advocating for affordable, safe, and accessible housing at MSU.</p>
-      <a href="#join" class="btn btn-light btn-lg">Join Us Today</a>
+      <h1 class="display-4" data-aos="fade-up">Affordable Homes for All</h1>
+      <p class="lead" data-aos="fade-up" data-aos-delay="150">
+        Join us to advocate for housing justice.
+      </p>
+      <a
+        href="#about"
+        class="btn btn-primary btn-lg"
+        data-aos="fade-up"
+        data-aos-delay="300"
+        >Learn More</a
+      >
+    </div>
+  </header>
+
+  <!-- About Section -->
+  <section id="about" class="container py-5">
+    <div data-aos="fade-right">
+      <h2>About Us</h2>
+      <p>
+        We’re a student-led organization advocating for affordable housing
+        through policy, community outreach, and education.
+      </p>
     </div>
   </section>
-    </nav>
 
-  <!-- CONTENT -->
-  <main class="container my-5">
+  <!-- Projects Section -->
+  <section id="projects" class="bg-light py-5">
+    <div class="container">
+      <div data-aos="fade-left">
+        <h2>Projects</h2>
+        <p>
+          Explore our initiatives that aim to make housing accessible for
+          everyone.
+        </p>
+      </div>
+    </div>
+  </section>
 
-    <section id="about" class="mb-5">
-      <h2 class="text-success">Preamble</h2>
+  <!-- Contact Section -->
+  <section id="contact" class="container py-5">
+    <div data-aos="zoom-in">
+      <h2>Contact Us</h2>
       <p>
-        We, the students of Michigan State University, recognizing the critical importance of affordable, safe, and accessible housing for the well-being and success of the student body, do hereby establish this Constitution for the Spartan Housing Alliance in pursuit of advocacy, education, and community empowerment in housing justice.
+        Want to get involved? Email
+        <a href="mailto:info@myorg.com">info@myorg.com</a>.
       </p>
-    <!-- HERO -->
-    <section class="hero">
-      <div class="container">
-        <h1 data-aos="fade-up">Spartan Housing Alliance</h1>
-        <p data-aos="fade-up" data-aos-delay="150">
-          Advocating for affordable, safe, and accessible housing at MSU.
-        </p>
-        <a
-          href="#join"
-          class="btn btn-light btn-lg"
-          data-aos="fade-up"
-          data-aos-delay="300"
-          >Join Us Today</a
-        >
-      </div>
-    </section>
+    </div>
+  </section>
 
-    <section id="mission" class="mb-5">
-      <h2 class="text-success">Mission & Purpose</h2>
-      <ul>
-        <li>Advocate for policies and initiatives that promote affordable, safe, and accessible housing options for all MSU students.</li>
-        <li>Educate students and the broader community on critical housing issues.</li>
-        <li>Empower students to engage in housing-related advocacy efforts.</li>
-        <li>Collaborate with administration, government, and community partners.</li>
-      </ul>
-    </section>
-    <!-- CONTENT -->
-    <main class="container my-5">
-      <section id="about" class="mb-5" data-aos="fade-up">
-        <h2 class="text-success">Preamble</h2>
-        <p>
-          We, the students of Michigan State University, recognizing the
-          critical importance of affordable, safe, and accessible housing for
-          the well-being and success of the student body, do hereby establish
-          this Constitution for the Spartan Housing Alliance in pursuit of
-          advocacy, education, and community empowerment in housing justice.
-        </p>
-      </section>
+  <!-- Back-to-top Button -->
+  <button id="backToTop" class="btn btn-primary">
+    <i class="bi bi-arrow-up"></i>
+  </button>
 
-    <section id="exec" class="mb-5">
-      <h2 class="text-success">Executive Board</h2>
-      <div class="row g-4">
-        <div class="col-md-3">
-          <div class="card p-3 text-center">
-            <h5>Lila Abdullah</h5>
-            <p>President & Founder</p>
-      <section id="mission" class="mb-5" data-aos="fade-up">
-        <h2 class="text-success">Mission & Purpose</h2>
-        <ul>
-          <li>
-            Advocate for policies and initiatives that promote affordable, safe,
-            and accessible housing options for all MSU students.
-          </li>
-          <li>
-            Educate students and the broader community on critical housing
-            issues.
-          </li>
-          <li>
-            Empower students to engage in housing-related advocacy efforts.
-          </li>
-          <li>
-            Collaborate with administration, government, and community partners.
-          </li>
-        </ul>
-      </section>
+  <!-- Bootstrap JS Bundle -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-      <section id="exec" class="mb-5" data-aos="fade-up">
-        <h2 class="text-success">Executive Board</h2>
-        <div class="row g-4">
-          <div class="col-md-3">
-            <div class="card p-3 text-center">
-              <h5>Lila Abdullah</h5>
-              <p>President & Founder</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="card p-3 text-center">
-            <h5>[Name]</h5>
-            <p>Vice President</p>
-          <div class="col-md-3">
-            <div class="card p-3 text-center">
-              <h5>[Name]</h5>
-              <p>Vice President</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="card p-3 text-center">
-            <h5>[Name]</h5>
-            <p>Treasurer</p>
-          <div class="col-md-3">
-            <div class="card p-3 text-center">
-              <h5>[Name]</h5>
-              <p>Treasurer</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="card p-3 text-center">
-            <h5>[Name]</h5>
-            <p>Secretary</p>
-          <div class="col-md-3">
-            <div class="card p-3 text-center">
-              <h5>[Name]</h5>
-              <p>Secretary</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-      </section>
+  <!-- AOS JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 
-    <section id="calendar" class="mb-5">
-      <h2 class="text-success">Meetings & Events</h2>
-      <div class="ratio ratio-16x9">
-        <iframe src="https://calendar.google.com/calendar/embed?src=yourcalendarid&ctz=America/New_York"></iframe>
-      </div>
-    </section>
+  <script>
+    // Initialize AOS animations
+    AOS.init();
 
-    <section id="join" class="mb-5">
-      <h2 class="text-success">Join Us</h2>
-      <p>Membership is open to any currently enrolled MSU student who supports our mission. Joining SHA also subscribes you to our newsletter.</p>
-      <form action="https://formspree.io/f/your-form-id" method="POST" class="row g-3">
-        <div class="col-md-6">
-          <input type="text" name="name" class="form-control" placeholder="Your Name" required>
-        </div>
-        <div class="col-md-6">
-          <input type="email" name="email" class="form-control" placeholder="Your Email" required>
-      <section id="calendar" class="mb-5" data-aos="fade-up">
-        <h2 class="text-success">Meetings & Events</h2>
-        <div class="ratio ratio-16x9">
-          <iframe
-            src="https://calendar.google.com/calendar/embed?src=yourcalendarid&ctz=America/New_York"
-          ></iframe>
-        </div>
-        <div class="col-12">
-          <button type="submit" class="btn btn-success">Join & Subscribe</button>
-        </div>
-      </form>
-    </section>
-      </section>
-
-    <section id="announcements" class="mb-5">
-      <h2 class="text-success">Announcements</h2>
-      <div class="row g-4">
-        <div class="col-md-6">
-          <div class="card p-3">
-            <strong>Aug 2025:</strong><br> SHA founded and open for membership!
-      <section id="join" class="mb-5" data-aos="fade-up">
-        <h2 class="text-success">Join Us</h2>
-        <p>
-          Membership is open to any currently enrolled MSU student who supports
-          our mission. Joining SHA also subscribes you to our newsletter.
-        </p>
-        <form
-          action="https://formspree.io/f/your-form-id"
-          method="POST"
-          class="row g-3"
-        >
-          <div class="col-md-6">
-            <input
-              type="text"
-              name="name"
-              class="form-control"
-              placeholder="Your Name"
-              required
-            />
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="card p-3">
-            <strong>Sept 2025:</strong><br> First general meeting — details in calendar.
-          <div class="col-md-6">
-            <input
-              type="email"
-              name="email"
-              class="form-control"
-              placeholder="Your Email"
-              required
-            />
-          </div>
-          <div class="col-12">
-            <button type="submit" class="btn btn-success">
-              Join & Subscribe
-            </button>
-          </div>
-        </form>
-      </section>
-
-      <section id="announcements" class="mb-5" data-aos="fade-up">
-        <h2 class="text-success">Announcements</h2>
-        <div class="row g-4">
-          <div class="col-md-6">
-            <div class="card p-3">
-              <strong>Aug 2025:</strong><br />
-              SHA founded and open for membership!
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="card p-3">
-              <strong>Sept 2025:</strong><br />
-              First general meeting — details in calendar.
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-      </section>
-
-    <section id="newsletters" class="mb-5">
-      <h2 class="text-success">Latest Newsletters</h2>
-      <p><a href="newsletters/aug2025.pdf" target="_blank">August 2025 Newsletter (PDF)</a></p>
-    </section>
-      <section id="newsletters" class="mb-5" data-aos="fade-up">
-        <h2 class="text-success">Latest Newsletters</h2>
-        <p>
-          <a href="newsletters/aug2025.pdf" target="_blank"
-            >August 2025 Newsletter (PDF)</a
-          >
-        </p>
-      </section>
-    </main>
-
-  </main>
-    <!-- Scroll to Top Button -->
-    <button id="backToTop" class="btn btn-success btn-lg rounded-circle">
-      &uarr;
-    </button>
-
-  <!-- FOOTER -->
-  <footer>
-    <p>© 2025 Spartan Housing Alliance | Michigan State University</p>
-  </footer>
-    <!-- FOOTER -->
-    <footer>
-      <p>© 2025 Spartan Housing Alliance | Michigan State University</p>
-    </footer>
-
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    // Back-to-top button logic
+    const backToTop = document.getElementById("backToTop");
+    window.addEventListener("scroll", () => {
+      backToTop.style.display = window.pageYOffset > 300 ? "block" : "none";
+    });
+    backToTop.addEventListener("click", () => {
+      window.scrollTo({ top: 0, behavior: "smooth" });
+    });
+  </script>
 </body>
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-    <script src="script.js"></script>
-  </body>
 </html>
-script.js
-New
-+22
--0
-
-document.addEventListener("DOMContentLoaded", function () {
-  const navbar = document.querySelector(".navbar");
-  const backToTop = document.getElementById("backToTop");
-
-  window.addEventListener("scroll", function () {
-    if (window.scrollY > 50) {
-      navbar.classList.add("navbar-scrolled");
-      backToTop.classList.add("show");
-    } else {
-      navbar.classList.remove("navbar-scrolled");
-      backToTop.classList.remove("show");
-    }
-  });
-
-  backToTop.addEventListener("click", () => {
-    window.scrollTo({ top: 0, behavior: "smooth" });
-  });
-
-  AOS.init({
-    once: true,
-  });
-});
